--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:id="@+id/button"
-        android:onClick="onClickButton"
+        android:id="@+id/bscanner"
+        android:onClick="onClickButtonScan"
         android:layout_toStartOf="@+id/button2" />
 
 
@@ -27,14 +27,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/button2"
         android:onClick="onClickButton2"
-        android:layout_alignTop="@+id/button"
+        android:layout_alignTop="@+id/bscanner"
         android:layout_alignParentEnd="true"/>
 
     <Button
         android:text="запись в БД"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button"
+        android:layout_below="@id/bscanner"
         android:id="@+id/button3"
         android:onClick="onClickButton3"/>
 
@@ -43,8 +43,8 @@
         android:text="Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
-        android:layout_toEndOf="@+id/button"
+        android:layout_below="@+id/bscanner"
+        android:layout_toEndOf="@+id/bscanner"
         android:layout_marginStart="15dp"
         android:id="@+id/button4"
         android:onClick="onClickButton4"/>
@@ -63,9 +63,17 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/button4"
+        android:layout_below="@+id/button5"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button3"
+        android:layout_toEndOf="@+id/button3"
+        android:id="@+id/bReloadList"
+        android:onClick="onClickReloadList"/>
 
 
 </RelativeLayout>
