--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.adygha.smsdefender.MainActivity">
+    <!--android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.adygha.smsdefender.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin"-->
 
     <Button
         android:text="Сканировать устройство"
@@ -17,7 +17,9 @@
         android:layout_alignParentStart="true"
         android:id="@+id/bscanner"
         android:onClick="onClickButtonScan"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_below="@+id/securityStatusView"
+        android:layout_toStartOf="@+id/button2"
+        />
 
 
 
@@ -59,12 +61,6 @@
         android:id="@+id/button5"
         android:onClick="onClickButton5"/>
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/button5"
-        android:layout_alignParentStart="true" />
 
     <Button
         android:text="Button"
@@ -74,6 +70,26 @@
         android:layout_toEndOf="@+id/button3"
         android:id="@+id/bReloadList"
         android:onClick="onClickReloadList"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button5"
+        android:id="@+id/textViewInfo"
+        android:text="Список нежелательных сообщений"/>
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textViewInfo"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:background="@drawable/titul"
+        android:id="@+id/securityStatusView"
+        android:layout_width="match_parent"
+        android:layout_height="220dp" />
 
 
 </RelativeLayout>
