--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,95 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.adygha.smsdefender.MainActivity">
+    tools:context="com.example.adygha.smsdefender.MainActivity"
+    android:elevation="1dp"
+    android:background="@color/colorWhite">
     <!--android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"-->
-
-    <Button
-        android:text="Сканировать устройство"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:id="@+id/bscanner"
-        android:onClick="onClickButtonScan"
-        android:layout_below="@+id/securityStatusView"
-        android:layout_toStartOf="@+id/button2"
-        />
-
-
-
-    <Button
-        android:text="Поместить запись"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:onClick="onClickButton2"
-        android:layout_alignTop="@+id/bscanner"
-        android:layout_alignParentEnd="true"/>
-
-    <Button
-        android:text="запись в БД"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/bscanner"
-        android:id="@+id/button3"
-        android:onClick="onClickButton3"/>
-
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/bscanner"
-        android:layout_toEndOf="@+id/bscanner"
-        android:layout_marginStart="15dp"
-        android:id="@+id/button4"
-        android:onClick="onClickButton4"/>
-
-
-    <Button
-        android:text="Clear db"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button4"
-        android:layout_marginStart="15dp"
-        android:id="@+id/button5"
-        android:onClick="onClickButton5"/>
-
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button3"
-        android:layout_toEndOf="@+id/button3"
-        android:id="@+id/bReloadList"
-        android:onClick="onClickReloadList"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button5"
-        android:id="@+id/textViewInfo"
-        android:text="Список нежелательных сообщений"/>
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/textViewInfo"
-        android:layout_alignParentStart="true" />
 
     <ImageView
         android:background="@drawable/titul"
         android:id="@+id/securityStatusView"
         android:layout_width="match_parent"
         android:layout_height="220dp" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout"
+        android:id="@+id/textViewInfo"
+        android:text="Список нежелательных сообщений"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="25dp"
+        android:textSize="14sp"
+        android:textColor="@android:color/black" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textViewInfo"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="5dp"
+        />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout"
+        android:layout_below="@+id/securityStatusView"
+        android:layout_alignParentStart="true"
+        >
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <ImageButton
+                android:id="@+id/buttonScan"
+                android:background="@drawable/scan"
+                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:layout_gravity="center"
+                android:onClick="onClickButtonScan"
+                android:clickable="true"/>
+
+            <ImageButton
+                android:id="@+id/buttonList"
+                android:background="@drawable/sms_list"
+                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:layout_gravity="center"
+                android:onClick="onClickReloadList"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/buttonStop"
+                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:background="@drawable/stop"
+                android:layout_gravity="center"
+                android:onClick="onClickAppExit"/>
+
+            <ImageView
+                android:id="@+id/buttonTrash"
+                android:background="@drawable/trash"
+                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:layout_gravity="center"
+                android:onClick="onClickDeleteDB"/>
+        </LinearLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
